reload-edges -> restart, because concluding on edges only just convert it to VOD and DELETE api isnt available for streams pulled by edges, so deleting on the origin is the only way
